fixing catalog on mobile

--- a/style.css
+++ b/style.css
@@ -595,7 +595,6 @@ body {
   .productsCategoryContainer {
     position: relative;
     background-color: #383b28;
-    min-height: 100vh;
     width: 300vw;
     overflow: hidden;
     display: flex;
@@ -655,15 +654,14 @@ body {
   .ThirdCategory {
     position: relative;
     width: 100%;
-    height: 200vh;
-    overflow: hidden;
+    height: 50vh;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     gap: 30px;
     color: #e9d4b9;
-    padding-bottom: 100px;
+    overflow: hidden;
   }
 
   .FirstCategory {
